--- a/src/css/_Main.scss
+++ b/src/css/_Main.scss
@@ -1,59 +1,81 @@
 main {
-    padding: 80px 0;
-    position: relative;
     height: 100%;
+    position: relative;
     background-color: #f1f1f1;
     @include flexCenter(center, space-evenly, column);
 
-    .lazy{
+    .lazy-bp {
         z-index: 0;
         top: 0;
-        width: 100%;
-        height: 200px;
         position: absolute;
+        width: 100%;
+        height: 180px;
         background-color: #ef8910;
     }
 
     #user-dashboard {
         z-index: 1;
-        height: 100%;
-        min-width: 800px;
-        overflow: hidden;
+        height: 100vh;
+        margin: 80px 0;
+        min-width: 1120px;
         padding: 150px 50px 50px;
-        background-color: #ffffff; 
+        background-color: #ffffff;
 
-        p:first-child {
+        #name-card,
+        #cards-container {
             @include flexCenter(center, center, row);
         }
 
-        #panda-container {
+        #name-card {
+            color: #000000;
+
+            h3 {
+                margin: 0;
+            }
+
+        }
+
+        #cards-container {
             width: 100%;
             margin-top: 80px;
-            @include flexCenter(center, center, row);
 
-            .panda {
-                cursor: pointer;
-                background-image: linear-gradient(to top, 
-                    #ebebeb, #ececec, #ededed, #eeeeee, 
-                    #efefef,#f0f0f0, #f5f5f5, #fafafa, 
-                    #ffffff);
+            .cards {
                 width: 310px;
                 height: 320px;
-                padding: 25px;
+                cursor: pointer;
                 border-radius: 30px;
                 border: solid 1px #6c6c6c03;
-                @include flexCenter(center, center, row);
-                // box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.158), 0 2px 6px 2px rgba(60, 64, 67, 0.138);
+                box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.013), 0 2px 6px 2px rgba(60, 64, 67, 0.041);
+                background-image: linear-gradient(to top, #ebebeb, #ececec, #ededed, #eeeeee, #efefef,#f0f0f0, #f5f5f5, #fafafa, #ffffff);
 
                 &:nth-child(even) {
                     margin: 0 45px;
                 }
 
-                a > p {
-                    text-align: center;
+                a{
+                    width: 100%;
+                    height: 100%;
+                    padding: 35px;
+                    @include flexCenter(center, end, column);
+
+                    img {
+                        width: auto;
+                        height: 110px;
+                    }
+    
+                    p {
+                        margin-top: 60px;
+                        font-weight: 600;
+                        font-size: 1.3rem;
+                        text-align: center;
+                    }
+
                 }
 
             }
+
         }
+
     }
+
 }
