--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,10 +12,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body, html, #root {
-  height: 100vh;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
@@ -27,14 +23,17 @@ header {
   background-color: #ffffff;
 }
 
+body {
+  height: 100%;
+}
+
 a {
   color: #db7a08;
 }
 
 main {
-  padding: 80px 0;
-  position: relative;
   height: 100%;
+  position: relative;
   background-color: #f1f1f1;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -51,25 +50,26 @@ main {
           flex-direction: column;
 }
 
-main .lazy {
+main .lazy-bp {
   z-index: 0;
   top: 0;
-  width: 100%;
-  height: 200px;
   position: absolute;
+  width: 100%;
+  height: 180px;
   background-color: #ef8910;
 }
 
 main #user-dashboard {
   z-index: 1;
-  height: 100%;
-  min-width: 800px;
-  overflow: hidden;
+  height: 100vh;
+  margin: 80px 0;
+  min-width: 1120px;
   padding: 150px 50px 50px;
   background-color: #ffffff;
 }
 
-main #user-dashboard p:first-child {
+main #user-dashboard #name-card,
+main #user-dashboard #cards-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -85,54 +85,81 @@ main #user-dashboard p:first-child {
           flex-direction: row;
 }
 
-main #user-dashboard #panda-container {
+main #user-dashboard #name-card {
+  color: #000000;
+}
+
+main #user-dashboard #name-card h3 {
+  margin: 0;
+}
+
+main #user-dashboard #cards-container {
   width: 100%;
   margin-top: 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
 }
 
-main #user-dashboard #panda-container .panda {
-  cursor: pointer;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#ebebeb), color-stop(#ececec), color-stop(#ededed), color-stop(#eeeeee), color-stop(#efefef), color-stop(#f0f0f0), color-stop(#f5f5f5), color-stop(#fafafa), to(#ffffff));
-  background-image: linear-gradient(to top, #ebebeb, #ececec, #ededed, #eeeeee, #efefef, #f0f0f0, #f5f5f5, #fafafa, #ffffff);
+main #user-dashboard #cards-container .cards {
   width: 310px;
   height: 320px;
-  padding: 25px;
+  cursor: pointer;
   border-radius: 30px;
   border: solid 1px #6c6c6c03;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.013), 0 2px 6px 2px rgba(60, 64, 67, 0.041);
+          box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.013), 0 2px 6px 2px rgba(60, 64, 67, 0.041);
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#ebebeb), color-stop(#ececec), color-stop(#ededed), color-stop(#eeeeee), color-stop(#efefef), color-stop(#f0f0f0), color-stop(#f5f5f5), color-stop(#fafafa), to(#ffffff));
+  background-image: linear-gradient(to top, #ebebeb, #ececec, #ededed, #eeeeee, #efefef, #f0f0f0, #f5f5f5, #fafafa, #ffffff);
 }
 
-main #user-dashboard #panda-container .panda:nth-child(even) {
+main #user-dashboard #cards-container .cards:nth-child(even) {
   margin: 0 45px;
 }
 
-main #user-dashboard #panda-container .panda a > p {
+main #user-dashboard #cards-container .cards a {
+  width: 100%;
+  height: 100%;
+  padding: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main #user-dashboard #cards-container .cards a img {
+  width: auto;
+  height: 110px;
+}
+
+main #user-dashboard #cards-container .cards a p {
+  margin-top: 60px;
+  font-weight: 600;
+  font-size: 1.3rem;
   text-align: center;
+}
+
+header,
+header ul:last-child li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 header {
@@ -141,17 +168,16 @@ header {
 }
 
 header nav {
-  width: 100%;
-  min-width: 800px;
+  min-width: 1120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -169,7 +195,7 @@ header nav ul:nth-child(even) li {
 }
 
 header nav ul:nth-child(even) li a {
-  color: #818181 !important;
+  color: #818181;
   -webkit-transition: color 500ms ease-out;
   transition: color 500ms ease-out;
 }
@@ -178,24 +204,16 @@ header nav ul:nth-child(even) li a:hover {
   color: #000000 !important;
 }
 
-header nav ul:last-child li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+header nav ul:nth-child(even) li a a.active {
+  color: orangered;
 }
 
 header nav ul:last-child li article {
   margin-left: 10px;
+}
+
+header nav ul:last-child li article p {
+  color: black;
 }
 
 header nav ul:last-child li article a {
@@ -203,24 +221,7 @@ header nav ul:last-child li article a {
   text-decoration: underline;
 }
 
-footer {
-  height: 60px;
-  background-color: #000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
+footer,
 footer ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -235,6 +236,11 @@ footer ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+footer {
+  height: 60px;
+  background-color: #000;
 }
 
 footer ul li:first-child > a {
